fix: filters alignment and open/close behavior

--- a/src/ui/Profile/MyCertificates/MyCertificates.scss
+++ b/src/ui/Profile/MyCertificates/MyCertificates.scss
@@ -161,12 +161,13 @@
                     &__item {
                       width: 100%;
                       height: 60px;
-                      padding: 10px 30px 30px 50px;
+                      padding: 0 30px 0 50px;
                       font-size: 16px;
                       font-weight: bold;
                       text-align: left;
                       text-decoration: none;
-                      display: block;
+                      display: flex;
+                      align-items: center;
                       cursor: pointer;
 
                       &:hover {
@@ -185,9 +186,9 @@
                     background: #002a5b;
 
                     &__item {
-                      width: 100%;
+                      width: 277px;
                       height: 60px;
-                      padding: 10px 30px 30px 15px;
+                      padding: 0 30px 0 15px;
                       font-size: 16px;
                       font-weight: bold;
                       text-align: left;
@@ -263,12 +264,13 @@
                     &__item {
                       width: 100%;
                       height: 60px;
-                      padding: 20px 30px 0px 30px;
+                      padding: 0 30px 0 30px;
                       font-size: 16px;
                       font-weight: bold;
                       text-align: left;
                       text-decoration: none;
-                      display: block;
+                      display: flex;
+                      align-items: center;
                       cursor: pointer;
 
                       &:hover {
@@ -338,12 +340,13 @@
                     &__item {
                       width: 100%;
                       height: 60px;
-                      padding: 20px 30px 0px 30px;
+                      padding: 0 30px 0px 30px;
                       font-size: 16px;
                       font-weight: bold;
                       text-align: left;
                       text-decoration: none;
-                      display: block;
+                      display: flex;
+                      align-items: center;
                       cursor: pointer;
 
                       &:hover {
